# mate-university

./: Makefile.am  configure.ac
cairo-test/: cairo-test.c
